// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Wrapper should be added from mock custom elements JSON 1`] = `
"import * as React from 'react';
import { createComponent, EventName } from '@lit/react';
import { MockComponent as MockComponentLit } from './index';
import { MockComponentProps } from './defs';

export * from './defs';

const MockComponentReact = createComponent({
    displayName: 'MockComponent',
    elementClass: MockComponentLit,
    react: React,
    tagName: 'mock-component',
    events: {
        onCustomEvent: 'custom-event' as EventName<CustomEvent>,
        onAnotherCustomEvent: 'another-custom-event' as EventName<CustomEvent>,
    },
});



type MockComponentEvents = {
    onCustomEvent?: (event: CustomEvent<any>) => void;
    onAnotherCustomEvent?: (event: CustomEvent<any>) => void;
};

export const MockComponent = MockComponentReact as React.ForwardRefExoticComponent<React.PropsWithoutRef<MockComponentProps> & React.RefAttributes<MockComponentLit> & MockComponentEvents>;
"
`;

exports[`React Wrapper should be named the same as the component itself 1`] = `
"import * as React from 'react';
import { createComponent } from '@lit/react';
import { ButtonComponent as ButtonComponentLit } from './index';
import { ButtonComponentProps } from './defs';

export * from './defs';

const ButtonComponentReact = createComponent({
    displayName: 'ButtonComponent',
    elementClass: ButtonComponentLit,
    react: React,
    tagName: 'mock-component',
    events: {},
});





export const ButtonComponent = ButtonComponentReact as React.ForwardRefExoticComponent<React.PropsWithoutRef<ButtonComponentProps> & React.RefAttributes<ButtonComponentLit>>;
"
`;

exports[`React Wrapper should leave the events object empty if the component contains no custom events 1`] = `
"import * as React from 'react';
import { createComponent } from '@lit/react';
import { MockComponent as MockComponentLit } from './index';
import { MockComponentProps } from './defs';

export * from './defs';

const MockComponentReact = createComponent({
    displayName: 'MockComponent',
    elementClass: MockComponentLit,
    react: React,
    tagName: 'mock-component',
    events: {},
});





export const MockComponent = MockComponentReact as React.ForwardRefExoticComponent<React.PropsWithoutRef<MockComponentProps> & React.RefAttributes<MockComponentLit>>;
"
`;

exports[`React Wrapper should only be added if the component contains custom elements 1`] = `""`;
